--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,3 @@
-# GitHub Action for generating a contribution graph with a snake eating your contributions
 name: Generate Snake Animation
 
 on:
@@ -19,25 +18,27 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      # Step 1: Check out the repository so the workflow can access it
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      # Step 2: Generate the snake animation files
       - name: Generate snake animation
         uses: Platane/snk@v3
         id: snake-gif
         with:
           github_user_name: UnityNimit
-          # The output file, referenced in your README.md
+          # The output files, which will be created in a 'dist' directory
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Push snake animation
-        uses: crazy-max/ghaction-github-pages@v2.5.0
+      # Step 3: Commit and push the generated files back to the repository
+      - name: Commit and push snake animation
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          target_branch: main
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-          #this is snake
+          commit_message: "chore: update snake animation"
+          commit_user_name: github-actions[bot]
+          commit_user_email: 41898282+github-actions[bot]@users.noreply.github.com
+          # The specific files to commit. This prevents other files from being touched.
+          file_pattern: dist/*.svg
