--- a/.github/workflows/terminal.yml
+++ b/.github/workflows/terminal.yml
@@ -6,6 +6,10 @@ on:
     - cron: "0 * * * *"
   workflow_dispatch:
 
+# Add this permissions block
+permissions:
+  contents: write
+
 jobs:
   update-svg:
     runs-on: ubuntu-latest
