--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,4 @@
-name: Generate Snake Animation
+name: Generate Themed Snake Animation
 on:
   schedule:
     - cron: "0 */12 * * *"
@@ -17,11 +17,11 @@ jobs:
         id: snake-gif
         with:
           github_user_name: UnityNimit
+          # Here are the magic commands for the new look
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.svg?palette=github-dark&color_snake=%2300B900&color_dots=%23161b22,%230e4429,%23006d32,%2326a641,%2339d353
       - name: Commit and push snake animation
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "chore: update snake animation"
+          commit_message: "chore: update themed snake animation"
           file_pattern: dist/*.svg
